# math-operation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: math_library.h
src/: math_library.cpp
